--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <td><img src="My-pic-modified.png" alt="Madhu kiran profile picture"></td>
             <td>
                 <h1>Madhu kiran</h1>
-                <p><em>Sophomore at <strong>VIT-AP University</strong>.</em></p>
+                <p><em>Sophomore at <strong><a href="https://vitap.ac.in/">VIT-AP University</a></strong>.</em></p>
                 <br>
                 <p>Intrested in web development. Love to code❤️. </p>
             </td>
